--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,18 +11,7 @@ on:
       - "main"
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: bahmutov/npm-install@v1
-      - name: Unit Test
-        run: yarn test --coverage
-        env:
-          NODE_ENV: test
-
   docker:
-    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -32,7 +21,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            ${{ secrets.ALI_REGISTRY }}/36node/lecha-swagger
+            ${{ secrets.ALI_REGISTRY }}/36node/lecha-openapi
           # generate Docker tags based on the following events/attributes
           tags: |
             type=ref,event=branch
